[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/lengthLabel.gd" type="Script" id=1]
[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 0.219608 )
font_data = ExtResource( 2 )

[node name="lengthLabel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="dashLine1" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 3.0
default_color = Color( 1, 0, 0, 1 )

[node name="dashLine2" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 3.0
default_color = Color( 1, 0, 0, 1 )

[node name="dashLine3" type="Line2D" parent="."]
width = 3.0
default_color = Color( 0.164706, 0.670588, 0.972549, 1 )

[node name="dashLine4" type="Line2D" parent="."]
width = 3.0
default_color = Color( 0.164706, 0.670588, 0.972549, 1 )

[node name="head1" type="Control" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="head1"]
polygon = PoolVector2Array( 0, 0, -10, -6, -10, 6 )

[node name="head2" type="Control" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="head2"]
polygon = PoolVector2Array( 0, 0, -10, -6, -10, 6 )

[node name="labelHolder" type="Control" parent="."]

[node name="Label" type="Label" parent="labelHolder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -11.0
margin_right = 20.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
